--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todoshechka</title>
     <link rel="stylesheet" href="../public/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="src/assets/css/notifications.css">
 </head>
 <body style="font-family: 'Roboto',sans-serif;">
     <div id="app"></div>
